# qt-open-glpoint-cloud

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
3rd/include/: 3rd_utils.h  nljson.h
3rd/include/nanoflann/: nanoflann.hpp
data/: image.qrc
include/gl_widget_2d/: cloud_widget_2d_paint_dash.h  cloud_widget_2d_paint_interface.h  cloud_widget_2d_paint_points.h  cloud_widget_2d_paint_rect.h  gl_cloud_widget_2d.h  gl_cloud_widget_rng.h  gl_widget_2d_exp_def.h  point_typedef.h
src/: CMakeLists.txt  frmmain.cc  frmmain.h  frmmain.ui
src/csv_reader/: csv_reader.cc
src/gl_widget_2d/: CMakeLists.txt
src/gl_widget_2d/imp/: CMakeLists.txt  cloud_widget_2d_paint_dash_imp.cc  cloud_widget_2d_paint_interface_imp.cc  cloud_widget_2d_paint_points_imp.cc  cloud_widget_2d_paint_rect_imp.cc
src/gl_widget_2d/imp/inc/: cloud_widget_2d_paint_dash_imp.h  cloud_widget_2d_paint_interface_imp.h  cloud_widget_2d_paint_points_imp.h  cloud_widget_2d_paint_rect_imp.h  gl_cloud_widget_rng.h
src/gl_widget_2d/src/: CMakeLists.txt  cloud_widget_2d_paint_dash.cc  cloud_widget_2d_paint_interface.cc  cloud_widget_2d_paint_points.cc  cloud_widget_2d_paint_rect.cc  gl_cloud_widget_2d.cc
src/inc/: openglwidget.h
src/opengl/: shader.qrc
src/opengl/shader/: shader_mesh.fs
src/opengl_viewer_3d/: CMakeLists.txt  frmmain.h  main.cc
src/opengl_viewer_3d/csv_reader/: csv_reader.h
src/opengl_viewer_3d/data/: pointcloud.qrc
src/opengl_viewer_3d/inc/: head.h  openglwidget.h
src/opengl_viewer_3d/opengl/: openglwidget.cc
src/opengl_viewer_3d/opengl/shader/: shader_axis.vs  shader_point.vs
test/: CMakeLists.txt
test/GLWidget_2D/: CMakeLists.txt  glwidget.cc  glwidget.h  main_window.cc  main_window.h
test/gl_cloud_widget_2d/: CMakeLists.txt  chart_tooltip.cc  chart_tooltip.h  gl_widget.cc  gl_widget.h  main.cc  main_window.cc  main_window.h
test/gl_cloud_widget_2d/gl_cloud_widget_2d/: cloud_widget_2d_paint_dash.cc  cloud_widget_2d_paint_dash.h  cloud_widget_2d_paint_interface.h  cloud_widget_2d_paint_points.cc  cloud_widget_2d_paint_points.h  cloud_widget_2d_paint_rect.cc  cloud_widget_2d_paint_rect.h  gl_cloud_widget_2d.cc  gl_cloud_widget_2d.h  point_typedef.h
